// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableCellControl /> composes the className correctly 1`] = `
<ForwardRef
  className="test-classname xui-editabletablecell-control"
  inlineAlignment="start"
>
  <ContextProvider
    value={
      Object {
        "cellAttributes": undefined,
        "cellRef": Object {
          "current": null,
        },
        "useCellStyling": true,
      }
    }
  >
    <div
      className="xui-editabletablecell--border"
    />
  </ContextProvider>
</ForwardRef>
`;

exports[`<XUIEditableTableCellControl /> renders correctly 1`] = `
<ForwardRef
  className="xui-editabletablecell-control"
  inlineAlignment="start"
>
  <ContextProvider
    value={
      Object {
        "cellAttributes": undefined,
        "cellRef": Object {
          "current": null,
        },
        "useCellStyling": true,
      }
    }
  >
    <div
      className="xui-editabletablecell--border"
    >
      XUIEditableTableCellControl
    </div>
  </ContextProvider>
</ForwardRef>
`;
